Added "Flag" inappropriate content feature Several other small improvements

--- a/acl.ini
+++ b/acl.ini
@@ -59,13 +59,9 @@ accept = A
 parent_id = registered
 edit_question = A
 edit_answer = A
-
-;
-;Can moderate any resource
-[super_moderator]
-parent_id = moderator
 delete_question = A
 delete_answer = A
+
             
 ;
 ;can do most of the things
@@ -82,22 +78,8 @@ rate_question = A
 rate_answer = A
 accept = A
 rate = A
-
-            
-;
-;can do anything and everything
-[root]
-comment_blogpost = A
-comment_attach = A
-comment_resource = A
-register = A
-edit_blog_settings = A
-change_password = A
-edit_profile = A
-add_blog_post = A
-edit_own_blog_post = A
-edit_any_blog_post = A
-edit_any_comment = A
+delete_question = A
+delete_answer = A
             
 ;
 ;user caught spamming
