Added "Delete" Question, "Delete" answer feature Added "Retag" feature

--- a/acl.ini
+++ b/acl.ini
@@ -61,6 +61,8 @@ edit_question = A
 edit_answer = A
 delete_question = A
 delete_answer = A
+ban_user = A
+unban_user = A
 
             
 ;
@@ -80,6 +82,9 @@ accept = A
 rate = A
 delete_question = A
 delete_answer = A
+ban_user = A
+unban_user = A
+change_user_role = A
             
 ;
 ;user caught spamming
