Added feature to "Change User role" from Userinfo page if Viewer has permissions to do this. Started working on "Shred user" feature to deal with spammers

--- a/acl.ini
+++ b/acl.ini
@@ -83,8 +83,9 @@ rate = A
 delete_question = A
 delete_answer = A
 ban_user = A
-unban_user = A
+shred_user = A
 change_user_role = A
+
             
 ;
 ;user caught spamming
