--- a/acl.ini
+++ b/acl.ini
@@ -11,6 +11,7 @@
 view_question = A
 view_answers = A
 view_comments = A
+login = A
 
 ;
 ;unregistered on not logged in user
@@ -68,6 +69,7 @@ unban_user = A
 ;
 ;can do most of the things
 [administrator]
+parent_id = registered
 register = D
 change_password = A
 edit_profile = A
@@ -99,6 +101,7 @@ comment = D
 ;
 ;user privileges suspended
 [suspended]
+parent_id = everyone
 register = D
 ask = D
 answer = D
@@ -115,6 +118,7 @@ answer = D
 comment = D
 vote = D
 accept = D
+login = D
             
 ;
 ;Users without email address. 
