Added "Edit" Q or A functionality. Fixed, Improved several things

--- a/acl.ini
+++ b/acl.ini
@@ -62,6 +62,7 @@ edit_question = A
 edit_answer = A
 delete_question = A
 delete_answer = A
+retag = A
 ban_user = A
 unban_user = A
 
@@ -69,7 +70,7 @@ unban_user = A
 ;
 ;can do most of the things
 [administrator]
-parent_id = registered
+parent_id = moderator
 register = D
 change_password = A
 edit_profile = A
