--- a/acl.ini
+++ b/acl.ini
@@ -52,7 +52,13 @@ comment = A
 vote = A
 accept = A
 
+   
             
+;
+;regular member
+[virtual]
+parent_id = registered
+         
 ;
 ;can moderate some resources 
 ;but still needs specific permissions on resource
