--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -42,6 +42,7 @@ $HTTP["host"] == "support.lampcms.com" {
 	"/register" => "/index.php?a=register",
 	"^/([a-zA-Z\-]+)/page([0-9]+)\.html$" => "/index.php?a=$1&pageID=$2",
 	"^/aa/([0-9]+)/([a-f0-9]+)$" => "/index.php?a=activate&eid=$1&hash=$2",
-	"^/([a-zA-Z\-]+)/$" => "/index.php?a=$1"
+	"^/([a-zA-Z\-]+)/$" => "/index.php?a=$1",
+	"^/search/(m|r)/(.*)/page([0-9]+)\.html$" => "/index.php?a=search&ord=$1&q=$2&pageID=$3"
 )
 }
