--- a/!config.ini.dist
+++ b/!config.ini.dist
@@ -19,7 +19,10 @@ collection = "C_Cache"
 [CONSTANTS]
 ; set to true when debugging to enable
 ; debug log and raize error reporting level
-DEBUG = true;
+DEBUG = true
+; number of items per page
+; on search results page
+PER_PAGE_SEARCH = 10
 ; This will be used in some page as title as well as in some emails as 'From' name
 SITE_TITLE = "LampCms Q and A site"
 SITE_NAME ="LampCMS project"
@@ -94,9 +97,6 @@ EMAIL_ADMIN = "me@me.me"
 ;
 ; emails to new registrations sent from this domain
 EMAIL_DOMAIN = 
-; number of items per page
-; on search results page
-PER_PAGE_SEARCH = 10
 ; Make sure to set the value of SALT to a random string of about 40 chars
 ; then write it down and store it like gold!
 ; and never change it again!
