Intermediate commit just to backup changes. This commit is untested and may be unstable. For stable version use previous commit or wait for next one.

--- a/acl.ini
+++ b/acl.ini
@@ -48,7 +48,7 @@ add_blog_post = A
 post_by_email = A
 ask = A
 answer = A
-comment = A
+comment = D
 vote = A
 accept = A
 
@@ -68,7 +68,9 @@ edit_question = A
 edit_answer = A
 delete_question = A
 delete_answer = A
+delete_comment = A
 retag = A
+comment = A
 ban_user = A
 unban_user = A
 close_question = A
