--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -13,6 +13,7 @@ $HTTP["host"] == "support.lampcms.com" {
 	"^/questions([\/]{0,1})$" => "/index.php?a=viewquestions",
 	"^/questions/page([0-9]+)\.html" => "/index.php?a=viewquestions&pageID=$1",
 	"^/questions/([0-9]+)/(.*)" => "/index.php?a=viewquestion&qid=$1&urltext=$2",
+	"^/q([0-9]+)/([^\/]+)/([a-zA-Z_]+)/page([0-9]+)\.html" => "/index.php?a=viewquestion&qid=$1&urltext=$2&sort=$3&pageID=$4",
 	"^/q([0-9]+)/(.*)" => "/index.php?a=viewquestion&qid=$1&urltext=$2",
 	"^/ask([\/]{0,1})$" => "/index.php?a=askform",
 	"^/voted([\/]{0,1})$" => "/index.php?a=viewquestions&cond=voted",
@@ -36,9 +37,10 @@ $HTTP["host"] == "support.lampcms.com" {
 	"^/ansvote/([0-9]+)/(up|down)$" => "/index.php?a=vote&resid=$1&res=a&type=$2",
 	"^/accept/([0-9]+)$" => "/index.php?a=accept&aid=$1",
 	"^/users/([0-9]+)/(.*)" => "/index.php?a=userinfo&uid=$1&username=$2",
+	"^/users/([a-zA-Z]+)/page([0-9]+)\.html" => "/index.php?a=users&sort=$1&pageID=$2",
+	"^/users/([a-zA-Z]+)/" => "/index.php?a=users&sort=$1",
 	#
 	#	
-	
 	"/register" => "/index.php?a=register",
 	"^/([a-zA-Z\-]+)/page([0-9]+)\.html$" => "/index.php?a=$1&pageID=$2",
 	"^/aa/([0-9]+)/([a-f0-9]+)$" => "/index.php?a=activate&eid=$1&hash=$2",
