--- a/!config.ini.dist
+++ b/!config.ini.dist
@@ -101,7 +101,14 @@ AVATAR_SQUARE_SIZE= 40
 ;http://www.maxmind.com/app/geolitecity
 ;
 GEOIP_FILE = GeoLiteCity.dat
-
+;
+;
+; Set the LOG_PER_SCRIPT to true (default)
+; to always reset log fine for
+; each new script
+; Logging is enabled in debugging mode only
+;
+LOG_PER_SCRIPT = true
 ; set LOG_FILE_PATH to point to your writable log file to enable logging
 ; for example: /usr/local/apache/sites/qa.lampcms.com/logs/php.log
 LOG_FILE_PATH = php.log
