--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -31,6 +31,9 @@ $HTTP["host"] == "support.lampcms.com" {
 	"^/tags/name([\/]{0,1})$" => "/index.php?a=viewqtags&cond=name",
 	"^/tags/recent([\/]{0,1})$" => "/index.php?a=viewqtags&cond=recent",
 	"^/tags/popular([\/]{0,1})$" => "/index.php?a=viewqtags&cond=popular",
+	#
+	"^/tags/(name|recent|popular)/page([0-9]+)\.html$" => "/index.php?a=viewqtags&cond=$1&pageID=$2",
+	#
 	"^/tagged/(.*)/$" => "/index.php?a=tagged&tags=$1",
 	"^/tagged/(.*)/page([0-9]+)\.html$" => "/index.php?a=tagged&tags=$1&pageID=$2",
 	"^/vote/([0-9]+)/(up|down)$" => "/index.php?a=vote&resid=$1&res=q&type=$2",
