--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -48,6 +48,8 @@ $HTTP["host"] == "support.lampcms.com" {
 	"^/([a-zA-Z\-]+)/page([0-9]+)\.html$" => "/index.php?a=$1&pageID=$2",
 	"^/aa/([0-9]+)/([a-f0-9]+)$" => "/index.php?a=activate&eid=$1&hash=$2",
 	"^/([a-zA-Z\-]+)/$" => "/index.php?a=$1",
-	"^/search/(m|r)/(.*)/page([0-9]+)\.html$" => "/index.php?a=search&ord=$1&q=$2&pageID=$3"
+	"^/search/(m|r)/(.*)/page([0-9]+)\.html$" => "/index.php?a=search&ord=$1&q=$2&pageID=$3",
+	"^/tab/(a|q)/([0-9]+)/([a-zA-Z]+)/page([0-9]+)\.html$" => "/index.php?a=userinfotab&tab=$1&uid=$2&sort=$3&pageID=$4"
+
 )
 }
