--- a/acl.ini
+++ b/acl.ini
@@ -12,6 +12,7 @@ view_question = A
 view_answers = A
 view_comments = A
 login = A
+read = A
 
 ;
 ;unregistered on not logged in user
@@ -76,6 +77,7 @@ unban_user = A
 close_question = A
 edit_any_comment = A
 
+
             
 ;
 ;can do most of the things
@@ -99,7 +101,7 @@ ban_user = A
 shred_user = A
 change_user_role = A
 make_sticky = A
-
+edit_any_profile = A
             
 ;
 ;user caught spamming
