--- a/!config.ini.dist
+++ b/!config.ini.dist
@@ -93,7 +93,7 @@ SERVER_TIMEZONE = America/Chicago
 ;
 SKIP_CACHE = false
 ;
-;Leave at null unless
+;Leave blank unless
 ;you need to set cookie under some
 ;global domain.
 ;For example if your Q and A site is on
@@ -102,7 +102,7 @@ SKIP_CACHE = false
 ;of oursite.com, then you
 ;should set this value
 ;
-COOKIE_DOMAIN = null
+COOKIE_DOMAIN = 
 ;
 ;system path to temporary directory. Must we writable to php
 ; if not sure - leave blank to use system's default temporary directory
@@ -127,9 +127,13 @@ AVATAR_SQUARE_SIZE= 40
 ; default 1000000 means 1MB
 MAX_AVATAR_UPLOAD_SIZE = 1024000
 ;
+;
 ;Name of GeoIP file - must be in the LAMPCMS_DIR (root dir of program)
-;Download it from maxmind.com
-;http://www.maxmind.com/app/geolitecity
+;Download it from maxmind.com and save as GeoLiteCity.dat 
+;
+; http://www.maxmind.com/app/geolitecity
+; 
+; Or leave value of GEOIP_FILE blank to disable GeoIP lookup
 ;
 GEOIP_FILE = GeoLiteCity.dat
 ;
