--- a/Points.php.dist
+++ b/Points.php.dist
@@ -49,4 +49,123 @@
  *
  */
 
- 
+
+namespace Lampcms;
+
+/**
+ * Constants of reputation points per action performed
+ * as well as points required to perform certain actions
+ *
+ *
+ * @author Dmitri Snytkine
+ *
+ */
+class Points
+{
+	/**
+	 *
+	 * Someone voted for your question
+	 * @var int
+	 */
+	const UPVOTE_Q = 5;
+
+
+	/**
+	 *
+	 * Someone voted for your answer
+	 * @var int
+	 */
+	const UPVOTE_A = 10;
+
+
+	/**
+	 *
+	 * Someone accepted your answer as best answer
+	 * @var int
+	 */
+	const BEST_ANSWER = 15;
+
+
+	/**
+	 *
+	 * You accepted someones answer to your question
+	 * @var int
+	 */
+	const ACCEPT_ANSWER = 2;
+
+
+	/**
+	 *
+	 * You down voted someone's question or answer
+	 * @var int
+	 */
+	const CAST_DOWNVOTE = -1;
+
+
+	/**
+	 *
+	 * Someone voted down your answer or question
+	 * @var int
+	 */
+	const DOWNVOTE = -2;
+
+
+	/**
+	 * Your Q or A received marked as offensive 5 times
+	 * @var int
+	 */
+	const OFFENSIVE = -100;
+
+
+	/**
+	 * User shared (posted)
+	 * Question or Answer to external site
+	 * via API (like Twitter or Facebook)
+	 * Enter description here ...
+	 * @var unknown_type
+	 */
+	const SHARED_CONTENT = 5;
+
+
+	/**
+	 * REPUTATION ACL LEVELS BELOW!
+	 */
+
+	/**
+	 * need this many points to retag other
+	 * user's question
+	 *
+	 * @var int
+	 */
+	const RETAG = 500;
+
+	/**
+	 * Need this many points to upvote
+	 *
+	 * @var int
+	 */
+	const VOTE_UP = 15;
+
+	/**
+	 * Need this many points to downvote
+	 *
+	 * @var int
+	 */
+	const VOTE_DOWN = 125;
+	/**
+	 * Need this many point to edit
+	 * Other user's content
+	 * Enter description here ...
+	 * @var int
+	 */
+	const EDIT = 2000;
+
+	/**
+	 * Need this many points to
+	 * Comment of other user's Question or Answer
+	 *
+	 * @var int
+	 */
+	const COMMENT = 25;
+
+}
