Fixed Registration bug, updates js and css, added new translations.

--- a/acl.ini
+++ b/acl.ini
@@ -102,6 +102,7 @@ shred_user = A
 change_user_role = A
 make_sticky = A
 edit_any_profile = A
+clear_cache = A
             
 ;
 ;user caught spamming
