--- a/acl.ini.dist
+++ b/acl.ini.dist
@@ -102,7 +102,8 @@ shred_user = A
 change_user_role = A
 make_sticky = A
 edit_any_profile = A
-            
+clear_cache = A
+           
 ;
 ;user caught spamming
 [spammer]
