--- a/acl.ini
+++ b/acl.ini
@@ -15,7 +15,7 @@ login = A
 read = A
 
 ;
-;unregistered on not logged in user
+;unregistered or not logged in user
 [guest]
 parent_id = everyone
 register = A
@@ -24,6 +24,7 @@ answer = D
 comment = D
 vote = D
 accept = D
+edit_category = A
 
             
 ;
