--- a/acl.ini.dist
+++ b/acl.ini.dist
@@ -15,7 +15,7 @@ login = A
 read = A
 
 ;
-;unregistered on not logged in user
+;unregistered or not logged in user
 [guest]
 parent_id = everyone
 register = A
